# chess-match-reviewer

./: Bishop.cpp  Bishop.h  BoardCell.h  BoardStructure.cpp  BoardStructure.h  CMakeLists.txt  Coord.h  EnterMatchToReviewScreen.qml  King.cpp  King.h  Knight.cpp  Knight.h  MatchReview.cpp  MatchReview.h  MatchReviewScreen.qml  Move.h  PastMove.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  PieceSquareTables.cpp  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  main.cpp  resources.qrc
